# st-multimodal-chatinput

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  example.py  generate_artifacts.sh  pyproject.toml
st_multimodal_chatinput/: __init__.py
st_multimodal_chatinput/frontend/src/: MultimodalChatInput.tsx
