[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["st-multimodal-chatinput"]

[project]
name = "st-multimodal-chatinput"
version = "0.1.7"
description = "Streamlit component that allows you to accept multi-modal inputs through a chat interface."
authors = [
  {name = "Het Patel", email = "2522het.patel@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["streamlit", "multimodal", "streamlit-component"]
requires-python = ">=3.7"
dependencies = [
    "streamlit>=0.63"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "wheel>=0.36.2"
]

[project.urls]
Homepage = "https://github.com/joshuasundance-swca/ai_changelog"
